# Squirrel

./: .cursorrules  .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  EXAMPLE.md  README.md  TODO-current.md  TODO-docguard.md  devenv.nix  devenv.yaml
.claude/: CLAUDE.md
.github/: dependabot.yml  markdown-link-check.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agent/: pyproject.toml
agent/src/sqrl/: __init__.py  embeddings.py
agent/src/sqrl/ipc/: __init__.py  handlers.py  server.py
agent/src/sqrl/memory_writer/: __init__.py
daemon/: Cargo.toml
daemon/src/: config.rs  error.rs  lib.rs  main.rs
daemon/src/cli/: agents.rs  clean.rs  config.rs  daemon.rs  gitignore.rs  goaway.rs  history.rs  hooks.rs  init.rs  instructions.rs  internal.rs  mcp.rs  mcp_config.rs  mod.rs  policy.rs  service.rs  setup.rs  sync.rs  watch.rs
daemon/src/config/: mod.rs
daemon/src/db/: mod.rs  schema.rs
daemon/src/ipc/: client.rs  mod.rs  types.rs
daemon/src/mcp/: mod.rs
daemon/src/storage/: mod.rs
daemon/src/watcher/: buffer.rs  commit.rs  file_watcher.rs  log_parser.rs  mod.rs  parser.rs  position_store.rs  session_tracker.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  EXAMPLE.md
project-rules/: general.mdc  python-agent.mdc  rust-daemon.mdc  specs.mdc  testing.mdc
reference/: CIPHER_ANALYSIS.md  CLI_ANALYSIS.md  MCP_MEMORY_SERVICE_ANALYSIS.md
specs/: ARCHITECTURE.md  CONSTITUTION.md  CONTRIBUTING.md  DECISIONS.md  INTERFACES.md  KEYS.md  PROMPTS.md  SCHEMAS.md  V1_ARCHITECTURE_REDESIGN.md
src/sqrl/: __init__.py  __main__.py  cr_memory.py  embeddings.py  retrieval.py
src/sqrl/agents/: __init__.py  log_cleaner.py  memory_extractor.py  project_summarizer.py  user_scanner.py
src/sqrl/db/: __init__.py  repository.py
src/sqrl/ipc/: __init__.py  handlers.py
src/sqrl/memory_writer/: __init__.py  writer.py
src/sqrl/parsers/: claude_code.py
tests/: test_cr_memory.py  test_db.py  test_ipc.py
