[package]
name = "sqrl"
version = "0.1.0"
edition = "2021"
description = "Squirrel daemon - local-first memory system for AI coding tools"

[[bin]]
name = "sqrl"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path utilities
dirs = "5"

# Error handling
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
